test/negative/702_module_not_found.fx
// expect: not found
import NoSuchModule
println(0)
