test/negative/702_module_not_found.err
702_module_not_found.fx:2:8: error: module NoSuchModule is not found
 2 | import NoSuchModule
   |        ^~~~~~~~~~~~
